dkos/dkos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name:  t-ui
  namespace: frontend
  labels:
    app: t-ui-fe
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: t-ui-fe
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: t-ui-fe
    spec:
      containers:
        - name:  t-ui
          image: idock.daumkakao.io/alex_js/t-ui-fe:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
